Fix overflow to list-item exceds hover listener

--- a/src/stylesheet/_list.scss
+++ b/src/stylesheet/_list.scss
@@ -53,6 +53,7 @@
       color: #444;
       user-select: none;
       display: flex;
+      overflow: hidden;
 
       &:hover {
         background-color: #eef6ff;
